--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"host": "Enter your server ip or url",
-	"port": "Enter your server port",
-	"username": "Enter the AFK bot's username you want",
+	"host": "spatt.aternos.me",
+	"port": "13011",
+	"username": "cukkoyumuhtari",
 	"logger": [ true
 		,"true : display not necessary logs. (ex: key inputs on bot)",
 		"false : display only necessary logs. (ex: errors on bot & server)"
